--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: splashutils
 Section: unknown
 Priority: optional
 Maintainer: Jean-Damien Durand <jeandamiendurand@free.fr>
-Build-Depends: debhelper (>= 4.0.0), libpng12-dev, libjpeg62-dev, libfreetype6-dev, libklibc (>= 1.5.7-4+2.6.22.kamikaze5), libklibc-dev (>= 1.5.7-4+2.6.22.kamikaze5), libc6-dev, libmng-dev, libgpmg1-dev
+Build-Depends: debhelper (>= 4.0.0), libpng12-dev, libjpeg62-dev, libfreetype6-dev, libklibc (>= 1.5.7-4+2.6.22.kamikaze5), libklibc-dev (>= 1.5.7-4+2.6.22.kamikaze5), libc6-dev, libmng-dev, libgpmg1-dev, pkg-config
 Standards-Version: 3.6.2
 
 Package: splashutils
