--- a/core/scripts/splash-functions.sh.in
+++ b/core/scripts/splash-functions.sh.in
@@ -305,18 +305,11 @@ splash_cache_cleanup() {
 # Sends data to the splash FIFO after making sure there's someone
 # alive on the other end to receive it.
 splash_comm_send() {
-	if [ ! -e "${spl_pidfile}" ]; then
+	if [ -z "`pidof $(basename ${spl_daemon})`" ]; then
 		return 1
-	fi
-
-	splash_profile "comm $*"
-
-	if [ -r /proc/$(<"${spl_pidfile}")/status -a \
-		  "$( (read t;echo ${t} | sed -e 's/Name: //') </proc/$(<${spl_pidfile})/status)" = "fbsplashd.stati" ]; then
-		echo "$*" > "${spl_fifo}" &
 	else
-		echo "Splash daemon not running!"
-		rm -f "${spl_pidfile}"
+		splash_profile "comm $*"
+		echo "$*" > "${spl_fifo}" &
 	fi
 }
 
