--- a/core/scripts/Makefile.am
+++ b/core/scripts/Makefile.am
@@ -1,8 +1,7 @@
-bin_SCRIPTS   = bootsplash2fbsplash splash_manager splash_resize
-esbin_SCRIPTS = splash-functions.sh
-sbin_SCRIPTS  = splashy2fbsplash.py
+bin_SCRIPTS   = bootsplash2fbsplash splash_manager splash_resize splashy2fbsplash.py
+eexecsbin_SCRIPTS = splash-functions.sh
 if CONFIG_HELPER
-bin_SCRIPTS   += splash_geninitramfs
+sbin_SCRIPTS   = splash_geninitramfs
 endif
 
 EXTRA_DIST  = bootsplash2fbsplash.in splash-functions.sh.in splash_geninitramfs.in splash_manager.in splash_resize.in splashy2fbsplash.py.in
@@ -14,10 +13,10 @@ MOSTLYCLEANFILES = bootsplash2fbsplash splash-functions.sh splash_geninitramfs s
 	$(Q)rm -f $@
 	$(Q)cat $< | $(SED) \
 		-e 's|@PACKAGE_VERSION[@]|$(PACKAGE_VERSION)|g' \
-		-e 's|@bindir[@]|$(ebindir)|g' \
-		-e 's|@sbindir[@]|$(esbindir)|g' \
+		-e 's|@bindir[@]|$(eexecbindir)|g' \
+		-e 's|@sbindir[@]|$(eexecsbindir)|g' \
 		-e 's|@sysconfdir[@]|$(sysconfdir)|g' \
 		-e 's|@themedir[@]|$(themedir)|g' \
-		-e 's|@libdir[@]|$(elibdir)|g' \
+		-e 's|@libdir[@]|$(eexeclibdir)|g' \
 		> $@
 
