gentoo: add support for SPLASH_TEXTBOX

--- a/gentoo/Makefile
+++ b/gentoo/Makefile
@@ -5,7 +5,7 @@ LIB		?= lib
 CFLAGS 	+= -g -Wall
 LDFLAGS += -L../core/objs/.libs -L../core/.libs
 
-INCLUDES = -I../core/objs -I../core
+INCLUDES = -I../core/objs -I../core -I../core/src -I../core/objs/src
 
 splash.so: splash.o
 	$(CC) $(LDFLAGS) -fPIC -shared -Wl,-soname,$@ $+ -o $@ -leinfo -lrc -lfbsplash
