--- a/gentoo/splash.conf
+++ b/gentoo/splash.conf
@@ -12,6 +12,10 @@ SPLASH_VERBOSE_ON_ERRORS="yes"
 # This should be a comma separated list. Valid items: fadein, fadeout
 SPLASH_EFFECTS="fadein,fadeout"
 
+# In the silent mode, show the textbox by default if the theme supports it?
+# (yes/no)
+SPLASH_TEXTBOX="no"
+
 #########################################################################
 # The options below affect settings which are normally specified on the
 # kernel command line and are probably useful only in uncommon
