gentoo: add support for SPLASH_AUTOVERBOSE

--- a/gentoo/splash.conf
+++ b/gentoo/splash.conf
@@ -16,6 +16,10 @@ SPLASH_EFFECTS="fadein,fadeout"
 # (yes/no)
 SPLASH_TEXTBOX="no"
 
+# If set to a positive value, fbsplash will automatically switch to verbose
+# mode if there is no activity for the specified number of seconds.
+SPLASH_AUTOVERBOSE="0"
+
 #########################################################################
 # The options below affect settings which are normally specified on the
 # kernel command line and are probably useful only in uncommon
