debian: sanitize debian/rules to follow debian defaults

--- a/debian/rules
+++ b/debian/rules
@@ -16,18 +16,16 @@ DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 
 
-CFLAGS = -Wall -g
-
-ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-	CFLAGS += -O0
-else
-	CFLAGS += -O2
-endif
-
 config.status: patch configure
 	dh_testdir
 	# Add here commands to configure the package.
-	./configure --enable-debug --disable-klibc-shared --enable-deprecated --enable-fbcondecor --enable-helper --with-gpm --with-mng --with-png --with-ttf --with-ttf-kernel --with-essential-prefix=/ --sysconfdir=/etc
+ifneq "$(wildcard /usr/share/misc/config.sub)" ""
+	cp -f /usr/share/misc/config.sub config.sub
+endif
+ifneq "$(wildcard /usr/share/misc/config.guess)" ""
+	cp -f /usr/share/misc/config.guess config.guess
+endif
+	./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) --prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info CFLAGS="$(CFLAGS)" LDFLAGS="-Wl,-z,defs" --enable-debug --disable-klibc-shared --enable-deprecated --enable-fbcondecor --enable-helper --with-gpm --with-mng --with-png --with-ttf --with-ttf-kernel --with-essential-prefix=/ --sysconfdir=/etc
 
 
 build: build-stamp
@@ -59,17 +57,11 @@ clean-patched:
 	rm -f build-stamp 
 
 	# Add here commands to clean up after the build process.
-	-$(MAKE) clean
-	rm -f misc/.dirstamp
-	rm -f libtool
-	rm -f config.status
-ifneq "$(wildcard /usr/share/misc/config.sub)" ""
-	cp -f /usr/share/misc/config.sub config.sub
-endif
-ifneq "$(wildcard /usr/share/misc/config.guess)" ""
-	cp -f /usr/share/misc/config.guess config.guess
-endif
-
+	-$(MAKE) distclean
+	# rm -f config.sub config.guess
+	# rm -f misc/.dirstamp
+	# rm -f libtool
+	# rm -f config.status
 
 	dh_clean 
 
