core: make sure distclean removes fbsplash.h and splashy2fbsplash.py

--- a/core/scripts/Makefile.am
+++ b/core/scripts/Makefile.am
@@ -5,7 +5,7 @@ sbin_SCRIPTS   = splash_geninitramfs
 endif
 
 EXTRA_DIST  = bootsplash2fbsplash.in splash-functions.sh.in splash_geninitramfs.in splash_manager.in splash_resize.in splashy2fbsplash.py.in
-MOSTLYCLEANFILES = bootsplash2fbsplash splash-functions.sh splash_geninitramfs splash_manager splash_resize splashy2fbsplash
+MOSTLYCLEANFILES = bootsplash2fbsplash splash-functions.sh splash_geninitramfs splash_manager splash_resize splashy2fbsplash.py
 
 %: %.in
 	@$(call infmsg,CREATE,$@)
