--- a/core/scripts/splash-functions.sh.in
+++ b/core/scripts/splash-functions.sh.in
@@ -132,7 +132,7 @@ splash_setup() {
 	[ -f @sysconfdir@/conf.d/fbcondecor ] && . @sysconfdir@/conf.d/fbcondecor
 
 	if [ -f /proc/cmdline ]; then
-		options=$(grep -o 'splash=[^ ]*' /proc/cmdline)
+		options=$(/bin/grep -o 'splash=[^ ]*' /proc/cmdline)
 
 		# Execute this loop over $options so that we can process multiple
 		# splash= arguments on the kernel command line. Useful for adjusting
@@ -140,7 +140,7 @@ splash_setup() {
 		for opt in ${options} ; do
 			options=${opt#*=}
 
-			for i in $(echo "${options}" | sed -e 's/,/ /g') ; do
+			for i in $(echo "${options}" | /bin/sed -e 's/,/ /g') ; do
 				case ${i%:*} in
 					theme)		SPLASH_THEME=${i#*:} ;;
 					tty)		SPLASH_TTY=${i#*:} ;;
@@ -192,16 +192,18 @@ splash_start() {
 			return 1
 		fi
 
-		mount -n --bind / ${spl_tmpdir}
-		if [ ! -c "${spl_tmpdir}/dev/tty1" ]; then
+		if [ -n "$(grep -E '(^| )CONSOLE=/dev/tty1( |$)' /proc/cmdline)" ]; then
+			mount -n --bind / ${spl_tmpdir}
+			if [ ! -c "${spl_tmpdir}/dev/tty1" ]; then
+				umount -n ${spl_tmpdir}
+				splash_warn "The filesystem mounted on / doesn't contain the /dev/tty1 device"
+				splash_warn "which is required for the silent splash to function properly."
+				splash_warn "Silent splash will not be enabled. Please create the appropriate"
+				splash_warn "device node to avoid this message."
+				return 1
+			fi
 			umount -n ${spl_tmpdir}
-			splash_warn "The filesystem mounted on / doesn't contain the /dev/tty1 device"
-			splash_warn "which is required for the silent splash to function properly."
-			splash_warn "Silent splash will not be enabled. Please create the appropriate"
-			splash_warn "device node to avoid this message."
-			return 1
 		fi
-		umount -n ${spl_tmpdir}
 	fi
 
 	rm -f "${spl_pidfile}"
