--- a/core/scripts/splash-functions.sh.in
+++ b/core/scripts/splash-functions.sh.in
@@ -132,7 +132,7 @@ splash_setup() {
 	[ -f @sysconfdir@/conf.d/fbcondecor ] && . @sysconfdir@/conf.d/fbcondecor
 
 	if [ -f /proc/cmdline ]; then
-		options=$(/bin/grep -o 'splash=[^ ]*' /proc/cmdline)
+		options=$(grep -o 'splash=[^ ]*' /proc/cmdline)
 
 		# Execute this loop over $options so that we can process multiple
 		# splash= arguments on the kernel command line. Useful for adjusting
@@ -140,7 +140,7 @@ splash_setup() {
 		for opt in ${options} ; do
 			options=${opt#*=}
 
-			for i in $(echo "${options}" | /bin/sed -e 's/,/ /g') ; do
+			for i in $(echo "${options}" | sed -e 's/,/ /g') ; do
 				case ${i%:*} in
 					theme)		SPLASH_THEME=${i#*:} ;;
 					tty)		SPLASH_TTY=${i#*:} ;;
