gentoo: add support for the SPLASH_XSERVICE config setting

--- a/gentoo/splash.conf
+++ b/gentoo/splash.conf
@@ -20,6 +20,10 @@ SPLASH_TEXTBOX="no"
 # mode if there is no activity for the specified number of seconds.
 SPLASH_AUTOVERBOSE="0"
 
+# Name of the boot service starting X.  Useful in cases when X is started
+# by a custom initscript, other than the usual 'xdm'.
+# SPLASH_XSERVICE="xdm"
+
 #########################################################################
 # The options below affect settings which are normally specified on the
 # kernel command line and are probably useful only in uncommon
