--- a/arch/PKGBUILD
+++ b/arch/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Greg Helton <gt@fallendusk.org>
 
 pkgname=fbsplash
-pkgver=1.5.4.2
-pkgrel=3
+pkgver=1.5.4.3
+pkgrel=1
 pkgdesc="A userspace implementation of a splash screen for Linux (formerly known as gensplash)"
 arch=('i686' 'x86_64')
 url="http://fbsplash.berlios.de"
@@ -17,24 +17,17 @@ source=(http://download.berlios.de/fbsplash/splashutils-${pkgver}.tar.bz2 \
 	splash-functions-arch.sh \
 	fbsplash.conf \
 	fbsplash.initcpio_install \
-	fbsplash.daemon \
-	splashfunctions.patch)
-md5sums=('00dce0efb5e6389cacbf15c62d18e413'
+	fbsplash.daemon)
+md5sums=('c722cd4148817b9c50381d9bdc1ea6ef'
          '4ea33e99330abf4a9a468ac8c0ba48ca'
          '44375e92025ce07b3434773efb282127'
          '8ffb29400a2518b16f3dbca653855268'
          'b1b45761b2a5899a4fe8255fc9cfaf9c'
          '5cce2373181193207d105e150a7f371c'
-         '9f876244d6b09c96cf1543a1b47d6525'
-         '728c99f97f0ec64551e1bfbbe678970d')
+         '9f876244d6b09c96cf1543a1b47d6525')
 
 build() {
 	cd ${startdir}/src/splashutils-${pkgver}
-	
-	# splashutils patches
-	cd scripts/
-	patch < ${startdir}/src/splashfunctions.patch
-	cd ..
 
 	# Configure, make, and install
 	./configure --prefix=/usr --sysconfdir=/etc --enable-fbcondecor --with-gpm --with-mng --with-png --with-ttf --with-ttf-kernel
