gentoo: add some comments in splash.conf

--- a/gentoo/splash.conf
+++ b/gentoo/splash.conf
@@ -21,7 +21,10 @@ SPLASH_TEXTBOX="no"
 SPLASH_AUTOVERBOSE="0"
 
 # Name of the boot service starting X.  Useful in cases when X is started
-# by a custom initscript, other than the usual 'xdm'.
+# by a custom initscript, other than the usual 'xdm'.  If you are using a
+# custom X initscript and do not set this variable correctly, do not be
+# surprised if you end up at tty1 at the end of the boot process (instead of
+# in an X session).
 # SPLASH_XSERVICE="xdm"
 
 #########################################################################
