Fix a bug in splash-functions.sh.
This problem was reported in Gentoo bug #339767.

--- a/core/scripts/splash-functions.sh.in
+++ b/core/scripts/splash-functions.sh.in
@@ -341,7 +341,7 @@ splash_comm_send() {
 
 # Returns the current splash mode.
 splash_get_mode() {
-	local ctty="${spl_bindir}/fgconsole"
+	local ctty="$({spl_bindir}/fgconsole)"
 	local mode="$(${spl_util})"
 
 	if [ "${mode}" = "silent" ]; then
