Make sure splash_utils is always in /sbin.
This fixes a discrepancy between the statically and dynamically version
of the binary, which used to be located in /sbin and /usr/bin,
respectively.

--- a/core/scripts/splash-functions.sh.in
+++ b/core/scripts/splash-functions.sh.in
@@ -26,7 +26,7 @@ export spl_cachedir="@libdir@/splash/cache"
 export spl_tmpdir="@libdir@/splash/tmp"
 export spl_fifo="${spl_cachedir}/.splash"
 export spl_pidfile="${spl_cachedir}/daemon.pid"
-export spl_util="@bindir@/splash_util.static"
+export spl_util="@sbindir@/splash_util.static"
 export spl_daemon="@sbindir@/fbsplashd.static"
 export spl_decor="@sbindir@/fbcondecor_ctl.static"
 export spl_bindir="@libdir@/splash/bin"
